syntax = "proto3";
import "google/protobuf/empty.proto";
package server_client;

option java_multiple_files = true;
option java_package = "com.cs6650.server_client";
option java_outer_classname = "ServerClientProto";

service Service {
  rpc Operate(Request) returns (Response);
  rpc CanCommit(Tid) returns(Bool);
  rpc DoCommit(Tid) returns(google.protobuf.Empty);
  rpc DoAbort(Tid) returns(google.protobuf.Empty);
  rpc HaveCommitted(Tid) returns(google.protobuf.Empty);
  rpc NewRequest(Notif) returns(google.protobuf.Empty);
  rpc GetDecision(Tid) returns(google.protobuf.Empty);

}

message Request {
  Operation operation = 1;
  string key = 2;
  optional string value = 3;
}

message Response {
  bool status = 1;
  optional string msg = 2;
}

message Tid {
  string tid = 1;
}

message Notif {
  string tid = 1;
  Request request = 2;
}

message Bool {
  bool status = 1;
}

enum Operation {
  PUT = 0;
  GET = 1;
  DELETE = 2;
}